bugfix: sticky section on safari

--- a/public/css/public.css
+++ b/public/css/public.css
@@ -3490,7 +3490,13 @@ http://flickity.metafizzy.co
       opacity: 1; }
 
 .fade-element-in {
-  opacity: 0; }
+  opacity: 0;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0); }
   .fade-element-in.rex-element--animated {
     -webkit-transition: opacity 0.5s cubic-bezier(0.71, 0.35, 0.26, 0.83);
     -o-transition: opacity 0.5s cubic-bezier(0.71, 0.35, 0.26, 0.83);
@@ -5108,9 +5114,16 @@ a.pswp-item {
   display: inline-block; }
 
 .rexpansive_section.sticky-section.sticky-css .rex-video-wrap {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
   position: -webkit-sticky;
   position: sticky;
-  top: 0; }
+  top: 0;
+  z-index: 20; }
 
 .rexpansive_section.sticky-section.sticky-css .sticky-background-simulator {
   -webkit-transform-style: preserve-3d;
@@ -5122,6 +5135,7 @@ a.pswp-item {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 20;
   width: 100%;
   height: 100vh;
   background-size: cover;
@@ -5132,11 +5146,10 @@ a.pswp-item {
   will-change: transform; }
 
 .rexpansive_section.sticky-section .rex-video-wrap {
-  max-height: 100vh; }
+  height: 100vh; }
 
 @media screen and (min-width: 768px) {
   .rexpansive_section.sticky-section .perfect-grid-gallery {
-    margin-top: 100vh !important;
     margin-bottom: 20vh !important; } }
 
 @media screen and (max-width: 767px) {
